cmake_minimum_required(VERSION 3.16)
project(src/Parser)

set(CMAKE_CXX_STANDARD 11)
#add_definitions(-DVM_DEBUG)
#add_definitions(-DDEBUG)
add_executable(Parser
        src/Exception/MyException.cpp
        src/Lexer/Lexer.cpp
        src/Lexer/TokenBase.cpp
        src/main.cpp
        src/Output/MyOutput.cpp
        src/Parser/ErrorNode.cpp
        src/Parser/GramNode/AddExp.cpp
        src/Parser/GramNode/Block.cpp
        src/Parser/GramNode/BlockItem.cpp
        src/Parser/GramNode/BType.cpp
        src/Parser/GramNode/CompUnit.cpp
        src/Parser/GramNode/Cond.cpp
        src/Parser/GramNode/ConstDecl.cpp
        src/Parser/GramNode/ConstDef.cpp
        src/Parser/GramNode/ConstExp.cpp
        src/Parser/GramNode/ConstInitVal.cpp
        src/Parser/GramNode/Decl.cpp
        src/Parser/GramNode/EqExp.cpp
        src/Parser/GramNode/Exp.cpp
        src/Parser/GramNode/FuncDef.cpp
        src/Parser/GramNode/FuncFParam.cpp
        src/Parser/GramNode/FuncFParams.cpp
        src/Parser/GramNode/FuncRParams.cpp
        src/Parser/GramNode/FuncType.cpp
        src/Parser/GramNode/InitVal.cpp
        src/Parser/GramNode/LAndExp.cpp
        src/Parser/GramNode/LOrExp.cpp
        src/Parser/GramNode/LVal.cpp
        src/Parser/GramNode/MainFuncDef.cpp
        src/Parser/GramNode/MulExp.cpp
        src/Parser/GramNode/Number.cpp
        src/Parser/GramNode/PrimaryExp.cpp
        src/Parser/GramNode/RelExp.cpp
        src/Parser/GramNode/Stmt.cpp
        src/Parser/GramNode/UnaryExp.cpp
        src/Parser/GramNode/UnaryOp.cpp
        src/Parser/GramNode/VarDecl.cpp
        src/Parser/GramNode/VarDef.cpp
        src/Parser/GramNode.cpp
        src/Parser/Parser.cpp
        src/Parser/TokenNode.cpp
        src/SymTable/SymTable.cpp
        src/VM/BaseObject.cpp
        src/VM/Interpreter.cpp
        src/VM/PCode.cpp
        src/VM/VMSymTable.cpp
        src/Parser/SymTableGenCode/SymTableGenCode.cpp
        )
